Pull #18627: Add `CodeCleanup`