@@ -21,7 +21,6 @@ package org.checkstyle.suppressionxpathfilter.coding;
 
 import java.io.File;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 import org.checkstyle.suppressionxpathfilter.AbstractXpathTestSupport;
@@ -106,7 +105,7 @@ public class XpathRegressionStringLiteralEqualityTest extends AbstractXpathTestS
             "6:29: " + getCheckMessage(StringLiteralEqualityCheck.class,
                     StringLiteralEqualityCheck.MSG_KEY, "=="),
         };
-        final List<String> expectedXpathQueries = Collections.singletonList(
+        final List<String> expectedXpathQueries = List.of(
             "/COMPILATION_UNIT"
                 + "/CLASS_DEF[./IDENT[@text='InputXpathStringLiteralEqualityExp']]"
                 + "/OBJBLOCK/METHOD_DEF[./IDENT[@text='myFunction']]"
