@@ -20,7 +20,6 @@
 package org.checkstyle.suppressionxpathfilter.imports;
 
 import java.io.File;
-import java.util.Collections;
 import java.util.List;
 
 import org.checkstyle.suppressionxpathfilter.AbstractXpathTestSupport;
@@ -59,7 +58,7 @@ public class XpathRegressionCustomImportOrderTest extends AbstractXpathTestSuppo
                         "java.util.Arrays.sort"),
         };
 
-        final List<String> expectedXpathQueries = Collections.singletonList(
+        final List<String> expectedXpathQueries = List.of(
                 "/COMPILATION_UNIT/STATIC_IMPORT[./DOT/IDENT[@text='PI']]"
         );
 
@@ -81,7 +80,7 @@ public class XpathRegressionCustomImportOrderTest extends AbstractXpathTestSuppo
                         CustomImportOrderCheck.MSG_LINE_SEPARATOR, "java.io.File"),
         };
 
-        final List<String> expectedXpathQueries = Collections.singletonList(
+        final List<String> expectedXpathQueries = List.of(
                 "/COMPILATION_UNIT/IMPORT[./DOT/IDENT[@text='File']]"
         );
 
@@ -103,7 +102,7 @@ public class XpathRegressionCustomImportOrderTest extends AbstractXpathTestSuppo
                         CustomImportOrderCheck.MSG_SEPARATED_IN_GROUP, "java.lang.Math.PI"),
         };
 
-        final List<String> expectedXpathQueries = Collections.singletonList(
+        final List<String> expectedXpathQueries = List.of(
                 "/COMPILATION_UNIT/STATIC_IMPORT[./DOT/IDENT[@text='PI']]"
         );
 
@@ -126,7 +125,7 @@ public class XpathRegressionCustomImportOrderTest extends AbstractXpathTestSuppo
                         "com.puppycrawl.tools.checkstyle.api.DetailAST"),
         };
 
-        final List<String> expectedXpathQueries = Collections.singletonList(
+        final List<String> expectedXpathQueries = List.of(
                 "/COMPILATION_UNIT/IMPORT[./DOT/IDENT[@text='DetailAST']]"
         );
 
@@ -149,7 +148,7 @@ public class XpathRegressionCustomImportOrderTest extends AbstractXpathTestSuppo
                         "java.lang.Math.PI"),
         };
 
-        final List<String> expectedXpathQueries = Collections.singletonList(
+        final List<String> expectedXpathQueries = List.of(
                 "/COMPILATION_UNIT/STATIC_IMPORT[./DOT/IDENT[@text='PI']]"
         );
 
@@ -174,7 +173,7 @@ public class XpathRegressionCustomImportOrderTest extends AbstractXpathTestSuppo
                         "com.puppycrawl.tools.checkstyle.api.DetailAST"),
         };
 
-        final List<String> expectedXpathQueries = Collections.singletonList(
+        final List<String> expectedXpathQueries = List.of(
                 "/COMPILATION_UNIT/IMPORT[./DOT/IDENT[@text='DetailAST']]"
         );
 
