@@ -20,7 +20,6 @@
 package org.checkstyle.suppressionxpathfilter.imports;
 
 import java.io.File;
-import java.util.Collections;
 import java.util.List;
 
 import org.checkstyle.suppressionxpathfilter.AbstractXpathTestSupport;
@@ -56,7 +55,7 @@ public class XpathRegressionUnusedImportsTest extends AbstractXpathTestSupport {
                     UnusedImportsCheck.MSG_KEY, "java.util.List"),
         };
 
-        final List<String> expectedXpathQueries = Collections.singletonList(
+        final List<String> expectedXpathQueries = List.of(
                 "/COMPILATION_UNIT/IMPORT/DOT[./IDENT[@text='List']]/DOT/IDENT[@text='java']");
 
         runVerifications(moduleConfig, fileToProcess, expectedViolation,
@@ -76,7 +75,7 @@ public class XpathRegressionUnusedImportsTest extends AbstractXpathTestSupport {
                     UnusedImportsCheck.MSG_KEY, "java.util.Map.Entry"),
         };
 
-        final List<String> expectedXpathQueries = Collections.singletonList(
+        final List<String> expectedXpathQueries = List.of(
                 "/COMPILATION_UNIT/STATIC_IMPORT/DOT"
                         + "[./IDENT[@text='Entry']]/DOT[./IDENT[@text='Map']]"
                         + "/DOT/IDENT[@text='java']");
